[gd_scene load_steps=2 format=3 uid="uid://f85s2avde6r4"]

[ext_resource type="Script" uid="uid://bnjfw5fu6g688" path="res://logic/lobby.gd" id="1"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = 320.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -156.0
offset_right = 110.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Multiplayer Pong"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LobbyPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -73.0
offset_right = 110.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1")

[node name="AddressLabel" type="Label" parent="LobbyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 6.0
offset_right = 77.0
offset_bottom = 29.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Address:"

[node name="Address" type="LineEdit" parent="LobbyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 37.0
offset_right = 210.0
offset_bottom = 68.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="HostButton" type="Button" parent="LobbyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 76.0
offset_right = 90.0
offset_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="JoinButton" type="Button" parent="LobbyPanel"]
layout_mode = 0
offset_left = 130.0
offset_top = 76.0
offset_right = 210.0
offset_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="StatusOk" type="Label" parent="LobbyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 114.0
offset_right = 210.0
offset_bottom = 137.0
size_flags_horizontal = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="StatusFail" type="Label" parent="LobbyPanel"]
modulate = Color(1, 0.427451, 0.345098, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 114.0
offset_right = 210.0
offset_bottom = 137.0
size_flags_horizontal = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="PortForward" type="Label" parent="LobbyPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = 91.0
offset_right = 25.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
text = "If you want non-LAN clients to connect,
make sure the port 8910 in UDP
is forwarded on your router."

[node name="FindPublicIP" type="LinkButton" parent="LobbyPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 61.0
offset_top = 118.0
offset_right = 269.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
text = "Find your public IP address"

[connection signal="pressed" from="LobbyPanel/HostButton" to="LobbyPanel" method="_on_host_pressed"]
[connection signal="pressed" from="LobbyPanel/JoinButton" to="LobbyPanel" method="_on_join_pressed"]
[connection signal="pressed" from="LobbyPanel/FindPublicIP" to="LobbyPanel" method="_on_find_public_ip_pressed"]
