[gd_scene load_steps=2 format=1]

[ext_resource path="res://lobby.gd" type="Script" id=1]

[node name="lobby" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 210.0
margin/top = 40.0
margin/right = 430.0
margin/bottom = 80.0
text = "Multiplayer Pong"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 160.0
margin/right = 430.0
margin/bottom = 270.0

[node name="address_label" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 62.0
margin/bottom = 24.0
text = "Address"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="address" type="LineEdit" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 30.0
margin/right = 210.0
margin/bottom = 54.0
text = "127.0.0.1"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="host" type="Button" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 60.0
margin/right = 90.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Host"
flat = false

[node name="join" type="Button" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 60.0
margin/right = 210.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Join"
flat = false

[node name="status_ok" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 90.0
margin/right = 210.0
margin/bottom = 104.0
custom_colors/font_color = Color( 0, 1, 0.015625, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="status_fail" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 90.0
margin/right = 210.0
margin/bottom = 104.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="panel/host" to="." method="_on_host_pressed"]

[connection signal="pressed" from="panel/join" to="." method="_on_join_pressed"]


